--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "vue-final-modal": "^2.4.1",
     "vue-masonry-css": "^1.0.3",
     "vue-screen": "^1.5.6",
+    "vue2-perfect-scrollbar": "^1.5.56",
+    "vuejs-datepicker": "^1.6.2",
     "vuelidate": "^0.7.6"
   },
   "devDependencies": {
